# Book-Club-_-Ap-Project

./: CMakeLists.txt  README.md  main.cpp  main_client.cpp  main_server.cpp  servermanager.cpp  servermanager.h
UML/: BookClubUml.html
res/: StickerView.qml  resources.qrc
src/adminPanel/: adminpanel.cpp  adminpanel.h  booktab.cpp  booktab.h  editbookdialogadmin.cpp  editbookdialogadmin.h  publisherstab.cpp  publisherstab.h  reviewstab.cpp  reviewstab.h  serverwindow.cpp  serverwindow.h  serverwindow.ui  usertab.cpp  usertab.h
src/auth/: firstPage.qml  loginwindow.cpp  loginwindow.h  recoverywindow.cpp  recoverywindow.h  signupwindow.cpp  signupwindow.h
src/database/: databasemanager.cpp  databasemanager.h  databasemanager_book.cpp  databasemanager_cart.cpp  databasemanager_core.cpp  databasemanager_library.cpp  databasemanager_publisher.cpp  databasemanager_social.cpp  databasemanager_user.cpp
src/publisherPanel/: addeditbookdialog.cpp  addeditbookdialog.h  bookcardwidget.cpp  bookcardwidget.h  editprofiledialog.cpp  editprofiledialog.h  publisherpanel.cpp  publisherpanel.h  setofferdialog.cpp  setofferdialog.h
src/server/: clienthandler.cpp  clienthandler.h  clienthandler_books.cpp  clienthandler_cart_and_purchases.cpp  clienthandler_discounts_wishlist_reviews.cpp  clienthandler_publisher.cpp  clienthandler_reviews_notifications.cpp  clienthandler_users.cpp  servermanager.cpp  servermanager.h  serverui.cpp  serverui.h  serverwindow.cpp  serverwindow.h
src/shared/: models.h
src/userPanel/: bookdetailspage.cpp  bookdetailspage.h  genreselectiondialog.cpp  genreselectiondialog.h  notificationtoast.cpp  notificationtoast.h  shoppingcarttab.cpp  shoppingcarttab.h  userpanel.cpp  userpanel.h  wishlistpage.cpp  wishlistpage.h
